--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^2.0.0",
+    "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-simple-mocha": "^0.4.0",
+    "merge": "^1.2.0",
     "mocha": "^2.1.0"
   }
 }
